--- a/static/index.html
+++ b/static/index.html
@@ -19,11 +19,6 @@
     </div>
     <div class="search">
       <form  id="uv-form">
-        <input
-        id="uv-search-engine"
-        value="https://www.google.com/search?q=%s"
-        type="hidden"
-        />
         <input type="text" placeholder="Starting Page" id="adrbar">
       </form>
       <div class="icon refresh">
@@ -47,6 +42,7 @@
   </main>
   <script src="/uv/uv.bundle.js" defer></script>
   <script src="/uv/uv.config.js" defer></script>
+  <script src="/uv/uv.sw.js" defer></script>
   <script src="script.js" defer></script>
   <script src="search.js" defer></script>
   <script src="register-sw.js" defer></script>
