--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,11 @@
     </div>
     <div class="search">
       <form  id="uv-form">
+        <input
+        id="uv-search-engine"
+        value="https://www.google.com/search?q=%s"
+        type="hidden"
+        />
         <input type="text" placeholder="Starting Page" id="adrbar">
       </form>
       <div class="icon refresh">
